<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_signin"></string>
    <string name="title_activity_rainy_day">Rainy Day</string>
    <string name="title">Betterment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Sign Up For Free</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="have_betterment_account">Have a Betterment Account?</string>
    <string name="want_betterment_account">Want a Betterment Account?</string>
    <string name="for_customer_support">For customer support, email support@betterment.com</string>
    <string name="action_goals">Goals</string>
    <string name="action_logout">Logout</string>

    <string name="app_name">Betterment</string>
    <string name="action_settings">Settings</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>


</resources>
